test/src/e2e_vm_tests/test_programs/should_pass/language/tuple_access/src/main.sw
script;

mod utils;
mod tests;

use tests::*;

fn main() -> u32 {
    let a = easy_test();
    a
}
